# cephalopod

./: .gitignore  README.md  cephalopod.py  config.py  db.py  dl.py  download.py  feeds.py  list.py  main.py  parse.py  podcasts.db  prune.py  pyproject.toml  shell.nix  stream.py  sync.py
doc/: config.yaml
podge/: main.py
