[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cephalopod"
version = "0.0.1"
authors = [
    {name = "James McLaren", email = "jdysmcl@tutanota.com"},
]
description = "Podcast management CLI"
keywords = ["podcast", "cli"]
license = {text = "GPL-3.0-only"}
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "pyyaml",
    "sqlalchemy",
    "feedparser"
]
